# blamelog

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/blamelog/: analysis.py  cli.py  gitops.py  models.py
tests/: test_gitops.py
